--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,4 @@
 @import url("icons css/heart.css");
 @import url("icons css/folder.css");
 @import url("icons css/gsicon.css");
+@import url("icons css/indian-flag.css");
