--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,4 @@
 @import url("icons css/folder.css");
 @import url("icons css/gsicon.css");
 @import url("icons css/indian-flag.css");
+@import url("icons css/cake.css");
